# Aegis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs
crates/aegis-cli/tests/: cli_refusal_tests.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: checksum.rs  error.rs  io_ext.rs  lib.rs  version.rs
crates/aegis-core/src/crypto/: aead.rs  ids.rs  kdf.rs  keyfile.rs  mod.rs  public_key.rs  wrap.rs
crates/aegis-core/src/util/: ct_eq.rs  mod.rs  zeroize.rs
crates/aegis-core/tests/: aead_stream_tests.rs  zeroize_tests.rs
crates/aegis-format/: Cargo.toml
crates/aegis-format/src/: acf.rs  lib.rs  reader.rs  validate.rs  writer.rs
crates/aegis-format/tests/: acf_tests.rs  crypto_tests.rs  header_tests.rs
crates/aegis-fuzzlite/: Cargo.toml
crates/aegis-fuzzlite/src/: main.rs
crates/aegis-testkit/: Cargo.toml
crates/aegis-testkit/src/: lib.rs
docs/: cryptography.md  format_overview.md  threat_model.md
examples/: README.md
scripts/: build_release.bat  build_release.sh  check.bat  check.sh
