[workspace]
members = [
    "crates/aegis-core",
    "crates/aegis-format",
    "crates/aegis-cli",
    "crates/aegis-testkit",
    "crates/aegis-fuzzlite",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.74"

[workspace.dependencies]
thiserror = "1.0.61"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zeroize = "1.7.0"
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rand_core = "0.6.4"
rpassword = "7.3.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
