[package]
name = "aegis-cli"
version = "1.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
aegis-format = { path = "../aegis-format" }
aegis-core = { path = "../aegis-core" }
