[package]
name = "aegis-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["zeroize"]
zeroize = ["dep:zeroize"]

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true, optional = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand_core = { workspace = true }
