[package]
name = "aegis-format"
version = "1.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
aegis-core = { path = "../aegis-core" }
zeroize = { workspace = true }

[dev-dependencies]
aegis-testkit = { path = "../aegis-testkit" }

